# Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Components.sln  GameEngine.sln  Makefile  README.md
Components/: CMakeLists.txt  Components.vcxproj  Components.vcxproj.filters  main.cpp
Components/Debug/: vc140.idb
Components/Debug/Components.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Components.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Components/x64/Debug/: vc140.idb
Core/: Asset.h  CMakeLists.txt  Constants.cpp  Constants.h  Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  FPSCounter.h  Logger.cpp  Logger.h  Message.cpp  Message.h  System.h  Types.h  utility.h
Core/Debug/: Core.idb
Core/Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Core.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
Core/Release/: constants.nativecodeanalysis.xml  core.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
Core/x64/Debug/: Core.idb
Debug/: Components.ilk  Core.lib  PlayerController.lib  RenderSystem.exp  RenderSystem.lib  WindowContext.lib
Lib/Simple OpenGL Image Library/lib/: SOIL.lib
Lib/glfw-3.1.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
Lib/glfw-3.1.1/docs/: Doxyfile
Lib/glfw-3.1.1/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
Lib/glfw-3.1.1/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
Lib/glfw-3.1.1/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  accuracy.vcxproj  accuracy.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  cursoranim.vcxproj  (+33 more)
Lib/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glm.sln
OpenGL Engine/: GameEngine.h  Input.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  OpenGL Engine.vcxproj  OpenGL Engine.vcxproj.filters  ShaderProgram.h  VAO.cpp  VAO.h  Vertex.h  main.cpp  resource.h
OpenGL Engine/Debug/: vc140.idb
OpenGL Engine/crytek-sponza/: sponza2.mtl
OpenGL Engine/tief3DS/: tief2.mtl
PlayerController/: CMakeLists.txt  PlayerController.vcxproj  PlayerController.vcxproj.filters  PlayerControllerSystem.cpp  PlayerControllerSystem.h  ReadMe.txt  stdafx.cpp
PlayerController/Debug/: PlayerController.idb
Release/: Components.iobj  Components.ipdb  Core.lib  OpenGL Engine.iobj  OpenGL Engine.ipdb  PlayerController.lib  RenderSystem.lib  WindowContext.lib
RenderSystem/: CMakeLists.txt  Constants.cpp  Constants.h  GameEngine.cpp  Input.cpp  Input.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderSystem.cpp  RenderSystem.h  RenderSystem.vcxproj  RenderSystem.vcxproj.filters  Scene.h  ShaderProgram.cpp  ShaderProgram.h  VAO.cpp  VAO.h  Vertex.h  gameengine.h  utility.h
RenderSystem/Debug/: RenderSystem.idb  model.obj.enc
RenderSystem/Release/: model.nativecodeanalysis.xml  rendersystem.nativecodeanalysis.xml  shaderprogram.nativecodeanalysis.xml  vao.nativecodeanalysis.xml
WindowContext/: CMakeLists.txt  ReadMe.txt  WindowContext.cpp  WindowContext.h  WindowContext.vcxproj  WindowContext.vcxproj.filters
WindowContext/Debug/: WindowContext.idb
data/: constants.lua  light.txt
data/constants/: constants.json  constants.lua  override.json
data/shaders/: basic.frag  basic.vert  basic_old.frag
x64/Debug/: Core.lib
x64/Release/: Core.lib  OpenGL Engine.iobj  OpenGL Engine.ipdb
(+441 files in other folders)
